[package]
name = "marginfi-cpi"
version = "0.1.0"
description = ""
edition = "2021"
authors = [""]
license = "Apache-2.0"
homepage = "https://github.com/mrgnlabs"
repository = "https://github.com/mrgnlabs"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet-beta = []

[dependencies]
anchor-gen = "0.3.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
